Fix up discussion of Butterfly results

--- a/demos/near_and_far/Butterfly Factorization.ipynb
+++ b/demos/near_and_far/Butterfly Factorization.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -84,9 +84,12 @@
     "Xfacs = np.linspace(1/2, 2, 30)\n",
     "Tfacs = 1/Xfacs\n",
     "\n",
-    "scale = np.pi  # Change me\n",
+    "# Change me\n",
+    "scale = np.pi  \n",
+    "resolution = 30\n",
+    "\n",
     "for Xfac, Tfac in zip(Xfacs, Tfacs):\n",
-    "    x, t = np.mgrid[0:Xfac*scale:200j, 0:Tfac*scale:200j]\n",
+    "    x, t = np.mgrid[0:Xfac*scale:resolution * 1j, 0:Tfac*scale:resolution * 1j]\n",
     "    mat = np.exp(1j*x*t)\n",
     "    \n",
     "    _, sigma, _ = la.svd(mat)\n",
@@ -487,16 +490,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B: 2048x4 P: 4x4\n"
+     ]
+    }
+   ],
    "source": [
     "lev = Level(0, nlevels, n)\n",
     "\n",
     "assert lev.nblock_rows == 1\n",
     "for i in range(lev.nblock_rows):\n",
     "    for j in range(lev.nblock_cols):\n",
-    "        Bs[0][i, j], Ps[0][i, j] = decomp(lev.matview(i, j, A))"
+    "        b, p = Bs[0][i, j], Ps[0][i, j] = decomp(lev.matview(i, j, A))\n",
+    "        if (i, j) == (0, 0):\n",
+    "            print(f\"B: {b.shape[0]}x{b.shape[1]} P: {p.shape[0]}x{p.shape[1]}\")"
    ]
   },
   {
@@ -508,58 +521,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Level 1: 1024x8\n",
-      "prev level B: 2048x4\n",
-      "bblock (top): 1024x8\n",
-      "ID: 1024x8 8x8\n",
-      "\n",
-      "Level 2: 512x16\n",
-      "prev level B: 1024x8\n",
-      "bblock (top): 512x16\n",
-      "ID: 512x16 16x16\n",
-      "\n",
-      "Level 3: 256x32\n",
-      "prev level B: 512x16\n",
-      "bblock (top): 256x32\n",
-      "ID: 256x17 17x32\n",
-      "\n",
-      "Level 4: 128x64\n",
-      "prev level B: 256x17\n",
-      "bblock (top): 128x34\n",
-      "ID: 128x17 17x34\n",
-      "\n",
-      "Level 5: 64x128\n",
-      "prev level B: 128x17\n",
-      "bblock (top): 64x34\n",
-      "ID: 64x17 17x34\n",
-      "\n",
-      "Level 6: 32x256\n",
-      "prev level B: 64x17\n",
-      "bblock (top): 32x34\n",
-      "ID: 32x17 17x34\n",
-      "\n",
-      "Level 7: 16x512\n",
-      "prev level B: 32x17\n",
-      "bblock (top): 16x34\n",
-      "ID: 16x16 16x34\n",
-      "\n",
-      "Level 8: 8x1024\n",
-      "prev level B: 16x16\n",
-      "bblock (top): 8x32\n",
-      "ID: 8x8 8x32\n",
-      "\n",
-      "Level 9: 4x2048\n",
-      "prev level B: 8x8\n",
-      "bblock (top): 4x16\n",
-      "ID: 4x4 4x16\n",
-      "\n"
+      "Level 1: 1024x8 Btop: 1024x8 -> B: 1024x8 P: 8x8\n",
+      "Level 2: 512x16 Btop: 512x16 -> B: 512x16 P: 16x16\n",
+      "Level 3: 256x32 Btop: 256x32 -> B: 256x16 P: 16x32\n",
+      "Level 4: 128x64 Btop: 128x33 -> B: 128x17 P: 17x33\n",
+      "Level 5: 64x128 Btop: 64x34 -> B: 64x17 P: 17x34\n",
+      "Level 6: 32x256 Btop: 32x34 -> B: 32x17 P: 17x34\n",
+      "Level 7: 16x512 Btop: 16x34 -> B: 16x16 P: 16x34\n",
+      "Level 8: 8x1024 Btop: 8x32 -> B: 8x8 P: 8x32\n",
+      "Level 9: 4x2048 Btop: 4x16 -> B: 4x4 P: 4x16\n"
      ]
     }
    ],
@@ -585,19 +562,16 @@
     "            Bs[ilev][j+1, k], Ps[ilev][j+1, k] = decomp(bblock_bottom)\n",
     "\n",
     "            if (j, k) == (0, 0):\n",
-    "                print(f\"Level {ilev}: {lev.block_nrows}x{lev.block_ncols}\")\n",
-    "                pB = Bs[ilev-1][j//2, 2*k].shape\n",
-    "                print(f\"prev level B: {pB[0]}x{pB[1]}\")\n",
-    "                print(f\"bblock (top): {bblock_top.shape[0]}x{bblock_top.shape[1]}\")\n",
     "                tB = Bs[ilev][j, k].shape\n",
     "                tP = Ps[ilev][j, k].shape\n",
-    "                print(f\"ID: {tB[0]}x{tB[1]} {tP[0]}x{tP[1]}\")\n",
-    "                print()"
+    "                print(\n",
+    "                    f\"Level {ilev}: {lev.block_nrows}x{lev.block_ncols} \"\n",
+    "                    f\"Btop: {bblock_top.shape[0]}x{bblock_top.shape[1]} -> B: {tB[0]}x{tB[1]} P: {tP[0]}x{tP[1]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -719,9 +693,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P: 8x8 * (2x256 = 512)\n",
+      "P: 16x16 * (4x128 = 512)\n",
+      "P: 16x32 * (8x64 = 512)\n",
+      "P: 17x33 * (16x32 = 512)\n",
+      "P: 17x34 * (32x16 = 512)\n",
+      "P: 17x34 * (64x8 = 512)\n",
+      "P: 16x34 * (128x4 = 512)\n",
+      "P: 8x32 * (256x2 = 512)\n",
+      "P: 4x16 * (512x1 = 512)\n"
+     ]
+    }
+   ],
    "source": [
     "#clear\n",
     "for ilev in range(1, nlevels + 1):\n",
@@ -734,7 +724,10 @@
     "                betas[ilev-1][j//2, 2*k+1]\n",
     "                ))\n",
     "            \n",
-    "            betas[ilev][j, k] = Ps[ilev][j, k] @ beta_glued"
+    "            betas[ilev][j, k] = Ps[ilev][j, k] @ beta_glued\n",
+    "            if (j, k) == (0, 0):\n",
+    "                p = Ps[ilev][j, k]\n",
+    "                print(f\"P: {p.shape[0]}x{p.shape[1]} * ({lev.nblock_rows}x{lev.nblock_cols} = {lev.nblock_rows*lev.nblock_cols})\")"
    ]
   },
   {
