--- a/notes/notes.org
+++ b/notes/notes.org
@@ -3560,7 +3560,7 @@ Questions:
 
 Let \(G \subset \mathbb{R}^n\) be compact.
 
-#+LATEX: \begin{theorem}[Arzel{\`a}-Ascoli]
+#+LATEX: \begin{theorem}[Arzel{\`a}-Ascoli {\scriptsize [Kress LIE 3rd ed. Thm. 1.18]}]
 
     \(U \subset C (G)\) is precompact iff it is bounded and
     /equicontinuous/.
@@ -3585,7 +3585,7 @@ for all \(\epsilon > 0\) there exists a \(\delta > 0\) such that
 
 if \(|x - y| < \delta\), then \(|f (x) - f (y) | < \epsilon\).\medskip
 #+LATEX: \end{hidden}
-*** Arzelà-Ascoli: Proof Sketch
+*** Arzelà-Ascoli: Proof Sketch for b\land e \Rightarrow c
 
 #+LATEX: \begin{hidden}
 - Pick a dense sequence in \(G\)
