Improve proof sketch of Arzela-Ascoli

--- a/notes/notes.org
+++ b/notes/notes.org
@@ -3590,12 +3590,18 @@ for all \(\epsilon > 0\) there exists a \(\delta > 0\) such that
 
 if \(|x - y| < \delta\), then \(|f (x) - f (y) | < \epsilon\).
 #+LATEX: \end{hidden}
-*** Arzelà-Ascoli: Proof Sketch for b\land e \Rightarrow c
+*** Arzelà-Ascoli: Proof Sketch for b\land e \Rightarrow precompact
 
 #+LATEX: \begin{hidden}
-- Pick a dense sequence in \(G\)
-- Use a diagonal argument to find pointwise convergent subsequence
-- Use equicontinuity to show uniform convergence
+- Let $f_n$ be a sequence in $U$. To show: Has Cauchy subseq. wrt $\norm{\cdot}_\infty$.
+- Pick a dense sequence $(x_i)$ in \(G\)
+- Use a diagonal argument to find pointwise convergent subsequence, numbered $n(k)$
+- Let $\epsilon>0$, use $\delta>0$ from equicontinuity.
+- Consider cover $B(x_i, \delta)$, let $M$ be such that $G\subseteq B(x_1,\delta) \cup\cdots\cup B(x_M,\delta)$
+- Let $x\in G$. Find $x_j$ such that $\abs{x_j-x}<\delta$.
+- $\abs{f_{n(k)}(x) - f_{n(\ell)(x)}}\le \abs{f_{n(k)}(x) - f_{n(k)(x_j)}}+\dots$
+
+  Outer terms small by equicontinuity, middle term small by convergence.
 #+LATEX: \end{hidden}
 
 *** Arzelà-Ascoli (II)
